# ORB-SLAM2-FeatureBooster

./: .gitignore  CMakeLists.txt  MH01-ORB.txt  README.md  build.sh
Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc  mono_upiita.cc
Examples/ROS/ORB_SLAM2/: Asus.yaml  CMakeLists.txt
Examples/ROS/ORB_SLAM2/src/: ros_mono.cc
Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
HPatch_matching_benchmark/: hpatch_benchmark.py
HPatch_matching_benchmark/cache/: ORB+Boost-B-FP32.npz
generate_hpatch_test_data/: CMakeLists.txt  extract_features_trt.cc
include/: FeatureBooster.h  Frame.h  System.h  Tracking.h
inference_speed_test/: CMakeLists.txt  main.cc
int8_quantization/: int8_quant.py
model/: featurebooster_int8.onnx
src/: FeatureBooster.cc  Frame.cc  System.cc  Tracking.cc
traj/: orb_MH01.txt  orb_MH02.txt  orb_MH03.txt  orb_MH04.txt  orb_MH05.txt  orb_V101.txt  orb_V102.txt  orb_V103.txt  orb_V201.txt  orb_V202.txt  orb_V203.txt
traj/fp16/: fp16_MH01_tum.txt  fp16_MH02_tum.txt  fp16_MH03_tum.txt  fp16_MH04_tum.txt  fp16_MH05_tum.txt  fp16_V101_tum.txt  fp16_V102_tum.txt  fp16_V103_tum.txt  fp16_V201_tum.txt  fp16_V202_tum.txt  fp16_V203_tum.txt
traj/fp32/: fp32_MH01_tum.txt  fp32_MH02_tum.txt  fp32_MH03_tum.txt  fp32_MH04_tum.txt  fp32_MH05_tum.txt  fp32_V101_tum.txt  fp32_V102_tum.txt  fp32_V103_tum.txt  fp32_V201_tum.txt  fp32_V202_tum.txt  fp32_V203_tum.txt
traj/int8/: int8_MH01_tum.txt  int8_MH02_tum.txt  int8_MH03_tum.txt  int8_MH04_tum.txt  int8_MH05_tum.txt  int8_V101_tum.txt  int8_V102_tum.txt  int8_V103_tum.txt  int8_V201_tum.txt  int8_V202_tum.txt  int8_V203_tum.txt
traj/orb/: orb_MH01_tum.txt  orb_MH02_tum.txt  orb_MH03_tum.txt  orb_MH04_tum.txt  orb_MH05_tum.txt  orb_V101_tum.txt  orb_V102_tum.txt  orb_V103_tum.txt  orb_V201_tum.txt  orb_V202_tum.txt  orb_V203_tum.txt
